# advent-of-code

./: .gitignore  .pylintrc  README.md
2020/day01/: Cargo.toml
2020/day01/src/: simple_input.txt
2020/day02/: Cargo.toml
2020/day02/src/: main.rs
2020/day03/: Cargo.toml
2020/day04/: Cargo.toml
2020/day05/: Cargo.toml
2020/day06/: Cargo.toml
2020/day06/src/: main.rs
2020/day07/: Cargo.toml
2020/day08/: Cargo.toml
2020/day08/src/: main.rs
2020/day09/: Cargo.toml
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
2020/day10/: Cargo.toml
2020/day10/src/: main.rs
2020/day11/: Cargo.toml
2020/day11/src/: main.rs
2020/day12/: Cargo.toml
2020/day12/src/: main.rs
2020/day13/: Cargo.toml
2020/day13/src/: main.rs
2020/day14/: Cargo.toml
2020/day14/src/: main.rs
2020/day15/: Cargo.toml
2020/day15/src/: main.rs
2020/day16/: Cargo.toml
2020/day16/src/: main.rs
2020/day17/: Cargo.toml
2020/day17/src/: main.rs
2020/day18/: Cargo.toml
2020/day18/src/: abm_calculator.lalrpop  aem_calculator.lalrpop  main.rs
2020/day2/: Cargo.toml
2020/day3/: Cargo.toml
2020/day3/src/: main.rs
2020/day4/: Cargo.toml
2020/day4/src/: main.rs
2020/day5/: Cargo.toml
2020/day5/src/: main.rs
2020/day6/: Cargo.toml
2020/day6/src/: main.rs
2020/day7/: Cargo.toml
2020/day7/src/: main.rs
2020/day8/: Cargo.toml
2020/day8/src/: main.rs
2020/day9/: Cargo.toml
2020/day9/src/: main.rs
2020/input_helpers/: Cargo.toml
2020/input_helpers/src/: lib.rs
2022/: NewDay.ps1  RegenBuildTemplates.ps1
2022/day01/c/: build.sh  day01.c  day01_simple.txt
2022/day02/c/: build.sh  day02.c  day02_build.sh  day2_build.sh
2022/day02/odin/: day02.odin
2022/day03/c/: build.sh  day03.c  day03_build.sh
2022/day04/c/: build.sh  day04.c  day04_build.sh
2022/day1/: day1.c  day1_build.sh
2024/day02/: sample_input2.txt  sample_input3.txt  sample_input4.txt  sample_input5.txt
2024/day08/: sample_input2.txt
2024/day14/: input.txt  sample_input2.txt
2024/day16/: sample_input3.txt
2024/day18/: input.txt  sample_input.txt
2024/day19/: input.txt
2024/day20/: sample_input.txt
2024/day24/: sample_input2.txt
2025/: .pylintrc  CMakeLists.txt  build.ps1
2025/day01/: day01.py  main.swift
2025/day02/: day02.py  main.swift
2025/day03/: day03.py  main.swift
2025/day04/: day04.py  main.swift
2025/day05/: day05.py
2025/day06/: day06.py  sample_input2.txt  sample_input3.txt
2025/day07/: day07.py
2025/day08/: day08.py
2025/day09/: day09.py
2025/day10/: day10.py
2025/day11/: day11.py
2025/day12/: day12.py
2025/daytemplate/: day00.py  main.swift
2025/shared/: CMakeLists.txt  util.py  util.swift
day1/: Cargo.toml
day1/src/: main.rs  simple_input.txt
day2/: Cargo.toml
day2/src/: main.rs
helpers/: helpers.c  helpers.h
helpers/c/: helpers.c  helpers.h
(+85 files in other folders)
