[package]
name = "day07"
version = "0.1.0"
authors = ["Scott Munro <scottnmunro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input_helpers = { path = "../input_helpers" }
lazy_static = "1.4.0"
regex = "1.4.2"
