[package]
name = "day18"
version = "0.1.0"
authors = ["Scott Munro <scottnmunro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
lalrpop-util = "0.19.0"
lalrpop = { version = "0.19.0", features = ["lexer"] }
regex = "1"
input_helpers = { path = "../input_helpers" }
